Remove now-unnecessary text wrap prevention

--- a/frontend/styles/components/nav.css
+++ b/frontend/styles/components/nav.css
@@ -14,7 +14,6 @@
   margin-right: 5px;
   text-align: center;
   text-decoration: none;
-  white-space: nowrap;
 }
 
 .Nav a::before {
